# kc_fep_poc

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/: main.py
src/kc_fep_poc/: __init__.py  agent.py  cem_planner.py  cli.py  cli_experiment.py  dataset.py  free_energy.py  metrics.py  orchestrator.py  validator.py  world_model.py
tests/: test_agent.py  test_cem_planner.py  test_dataset.py  test_free_energy.py  test_metrics.py  test_validator.py  test_world_model.py
