[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kc_fep_poc"
version = "0.1.0"
description = "Kolmogorov-complexity × Free-Energy toy demo"
authors = [{name = "Anonymous"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]
